[gd_scene load_steps=5 format=3 uid="uid://ripumxlg8a0k"]

[ext_resource type="Script" uid="uid://cim4lc1pfqjhx" path="res://game1_scenes/spawner.gd" id="1_peul4"]
[ext_resource type="PackedScene" uid="uid://cvvsyl818f2s8" path="res://game1_scenes/rock.tscn" id="2_gwwk4"]

[sub_resource type="SphereMesh" id="SphereMesh_gwwk4"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gwwk4"]
height = 0.4
radius = 1.5

[node name="Spawner" type="PathFollow3D"]
rotation_mode = 0
script = ExtResource("1_peul4")
rock_scene = ExtResource("2_gwwk4")

[node name="DirectionNode" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.52072, 0, 0)

[node name="RayCast3D" type="RayCast3D" parent="DirectionNode"]
transform = Transform3D(2.98023e-08, -1, 0, 1, 2.98023e-08, 0, 0, 0, 1, 0, 0.014, -1.55)
target_position = Vector3(0, -45, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true

[node name="RayCast3D3" type="RayCast3D" parent="DirectionNode"]
transform = Transform3D(2.98023e-08, -1, 0, 1, 2.98023e-08, 0, 0, 0, 1, 0, 0.0139636, -0.01)
target_position = Vector3(0, -45, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true

[node name="RayCast3D2" type="RayCast3D" parent="DirectionNode"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.014, 1.55)
target_position = Vector3(0, -45, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true

[node name="RockTimer" type="Timer" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_gwwk4")

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="Area3D" type="Area3D" parent="." groups=["rocks"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_gwwk4")

[connection signal="timeout" from="RockTimer" to="." method="_on_rock_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
